# d4v2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  compile_flags.txt  package-msys.bash  test.sh
.github/workflows/: CI.yaml
cmake/: FindGMP.cmake  FindMtKaHyPar.cmake  Findglucose.cmake  Solver.cmake
cmake_includes/: AddGoogleTest.cmake
demo/: Makefile
demo/compiler/src/: CompilerDemo.cpp  CompilerDemo.hpp  Main.cpp  ParseOption.hpp  option.dsc
demo/counter/: Makefile
demo/counter/src/: CounterDemo.cpp  CounterDemo.hpp  Main.cpp  option.dsc
demo/demoSave/: CounterGlobalCacheDemo.cpp  CounterGlobalCacheDemo.hpp  EREDemo.cpp  EREDemo.hpp  ErosionDemo.cpp  ErosionDemo.hpp  Main.cpp  MaxSharpSatDemo.cpp  MaxSharpSatDemo.hpp  MinSharpSatDemo.cpp  MinSharpSatDemo.hpp  ParseOption.cpp  ProjMcDemo.cpp  ProjMcDemo.hpp  dDnnfCompilerDemo.cpp  dDnnfCompilerDemo.hpp  option.dsc
demo/globalMc/: Makefile
demo/globalMc/src/: CounterGlobalCacheDemo.cpp  Main.cpp  ParseOption.cpp  option.dsc
demo/qbfCounter/: Makefile
demo/qbfCounter/instanceTest/: c-test.sh  f1.qcnf  f1.sol  f2.qcnf  f2.sol  f3.qcnf  f3.sol  f4.qcnf  f4.sol
demo/qbfCounter/src/: Main.cpp  QbfCounterDemo.cpp  QbfCounterDemo.hpp  option.dsc
demo/server/: Makefile  build.sh
demo/server/src/: Main.cpp  ParseOption.cpp  ServerCounter.cpp  ServerCounter.hpp  option.dsc
demo/server/testClient/: Makefile
demo/src/: Main.cpp  option.dsc
doc/built/: linux.md  macos.md  windows.md
include/: DdnnfCompiler.hpp
instancesTest/: mastermind_06_08_03-0003.uai_p3.cnf
instancesTest/circuits/: circuit.dimacs
instancesTest/cnfs/: cnf1.sol  cnf10.cnf  cnf11.cnf  cnf12.cnf  cnf12.sol  cnf13.cnf  cnf13.sol  cnf14.cnf  cnf15.cnf  cnf15.sol  cnf16.cnf  cnf16.sol  cnf17.cnf  cnf18.cnf  cnf19.cnf  cnf2.cnf  cnf2.sol  cnf20.cnf  cnf21.cnf  cnf22.cnf  cnf23.cnf  cnf24.cnf  cnf25.cnf  cnf26.cnf  cnf27.cnf  cnf28.cnf  cnf29.cnf  cnf3.cnf  cnf3.sol  cnf30.cnf  cnf31.cnf  cnf32.cnf  cnf33.cnf  cnf34.cnf  cnf35.cnf  cnf36.cnf  cnf37.cnf  cnf38.cnf  cnf4.cnf  cnf4.sol  (+28 more)
scripts/: Makefile  cnfToSDimacs.py  execute.sh  fastTest.sh  qbfdd.py  searchBadExitMaxSharpSAT.sh  searchBadExitModelCounting.sh  searchBadExitModelCountingQueries.sh  searchBadExitProjected.sh  searchBadExitQuick.sh  searchBadExitWModelCounting.sh  starexec_run_ds_preprocSharpEquiv.sh  testEre.sh  testErosion.sh  testMaxSharpSAT.sh  testMaxSharpSATEnum.sh  testMaxSharpSATThreshold.sh  testMinSharpSAT.sh  testModelCounter.sh  testModelCountingQuery.sh  testPreproc.sh  testProjModelCounting.sh
scripts/cnfuzzdd2009/: cnfdd.c  cnfuzz.c
src/: DdnnfCompiler.cpp  DdnnfCompilerRunnable.cpp  Main.cpp  option.dsc
src/caching/: BucketAllocator.cpp  BucketAllocator.hpp  BucketManager.hpp  CacheCleaningExpectation.hpp  CacheCleaningManager.hpp  CacheCleaningNone.hpp  CacheList.hpp  CacheManager.hpp  CacheNoCollision.hpp  CachedBucket.hpp  DataInfo.cpp  DataInfo.hpp  TmpEntry.hpp
src/caching/bucket/: BucketAllocator.cpp  BucketAllocator.hpp  BucketManager.hpp
src/caching/cleaning/: CacheCleaningExpectation.hpp  CacheCleaningManager.hpp  CacheCleaningNone.hpp
src/caching/cnf/: BucketInConstruction.cpp  BucketInConstruction.hpp  BucketManagerCnf.hpp  BucketManagerCnfCl.hpp  BucketManagerCnfCombi.hpp  BucketManagerCnfIndex.hpp  BucketManagerCnfSym.hpp  BucketSortInfo.hpp
src/config/: Config.cpp  Config.hpp  ConfigConverter.cpp  ConfigConverter.hpp
src/configurations/: Configuration.hpp  ConfigurationBranchingHeuristic.hpp  ConfigurationCache.hpp  ConfigurationDpllStyleMethod.hpp  ConfigurationEREMethod.hpp  ConfigurationMaxSharpSatMethod.hpp  ConfigurationMinSharpSatMethod.hpp  ConfigurationPartitioningHeuristic.hpp  ConfigurationPreproc.hpp  ConfigurationProjMcMethod.hpp  ConfigurationQbfCounter.hpp  ConfigurationSolver.hpp  ConfigurationSpec.hpp
src/exceptions/: BadBehaviourException.hpp  BucketException.hpp  FactoryException.hpp  NodeException.hpp  OptionException.hpp  ParserException.hpp
src/hashing/: HashString.hpp
src/heuristics/: BranchingHeuristic.cpp  BranchingHeuristic.hpp  BranchingHeuristicClassic.cpp  BranchingHeuristicClassic.hpp  BranchingHeuristicLargeArity.cpp  BranchingHeuristicLargeArity.hpp  PartitioningHeuristic.cpp  PartitioningHeuristic.hpp  PartitioningHeuristicNone.cpp  PartitioningHeuristicNone.hpp  PhaseHeuristic.cpp  PhaseHeuristic.hpp  PhaseHeuristicFalse.cpp  PhaseHeuristicFalse.hpp  PhaseHeuristicOccurrence.cpp  PhaseHeuristicOccurrence.hpp  PhaseHeuristicPolarity.cpp  PhaseHeuristicPolarity.hpp  PhaseHeuristicTrue.cpp  PhaseHeuristicTrue.hpp  ScoringMethod.cpp  ScoringMethod.hpp
src/heuristics/cnf/: PartitioningHeuristicBipartite.cpp  PartitioningHeuristicBipartite.hpp  PartitioningHeuristicBipartiteDual.cpp  (+33 more)
src/hyperGraph/: HyperEdge.cpp  HyperEdge.hpp  HyperGraph.cpp  HyperGraph.hpp  HyperGraphExtractor.hpp  HyperGraphExtractorDual.cpp  HyperGraphExtractorDual.hpp  HyperGraphExtractorPrimal.cpp  HyperGraphExtractorPrimal.hpp
src/methods/: Counter.hpp  CountingGlobalCache.hpp  CountingOperation.hpp  DataBranch.hpp  DecisionDNNFOperation.hpp  DpllStyleMethod.hpp  Erosion.hpp  ExistRandomExist.hpp  MaxSharpSAT.hpp  MaxSharpSAT.hpp.save  MethodManager.cpp  MethodManager.hpp  MinSharpSAT.hpp  OperationManager.hpp  ProjMCMethod.hpp  QbfCounter.hpp  QueryManager.cpp  QueryManager.hpp
src/partitioner/: PartitionerKahypar.cpp  PartitionerKahypar.hpp  PartitionerKahyparMT.cpp  PartitionerKahyparMT.hpp  PartitionerManager.cpp  PartitionerManager.hpp  PartitionerPatoh.cpp  PartitionerPatoh.hpp
src/preprocs/: PreprocManager.cpp  PreprocManager.hpp
src/problem/: CnfMatrix.hpp  ProblemManager.cpp  ProblemManager.hpp  ProblemTypes.cpp  ProblemTypes.hpp
src/solvers/: ActivityManager.cpp  ActivityManager.hpp  PolarityManager.hpp  WrapperSolver.cpp  WrapperSolver.hpp
src/specs/: SpecManager.cpp  SpecManager.hpp
src/utils/: AtMost1Extractor.cpp  AtMost1Extractor.hpp  BufferRead.hpp  Enum.hpp  EquivExtractor.cpp  EquivExtractor.hpp  MemoryStat.hpp  Parsing.cpp  Parsing.hpp
(+159 files in other folders)
